--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kellerzoneYT</title>
+    <title>FroogTT</title>
 </head>
 <body>
-
-    
+    <h1>Sobre a FroggTV</h1>
+    <h2>A froggTV e um grupo de influenciadores Brasileiros incluindo
+        nomes como: Scottonauta, Kellerzons, Umild e Tiba041
+    </h2>
+    <p></p>
 </body>
 </html>
